MINOR: Consumer tidying (#21832)
Resolves a couple of review comments from
https://github.com/apache/kafka/pull/21711. The remaining comments are
in `ShareConsumerTest` and will be addressed separately.

Reviewers: Lianet Magrans <lmagrans@confluent.io>, Viktor Somogyi-Vass
 <viktorsomogyi@gmail.com>, Chia-Ping Tsai <chia7712@gmail.com>